loucura loucura loucura

--- a/Mineracao_Textos/projeto01/main.ipynb
+++ b/Mineracao_Textos/projeto01/main.ipynb
@@ -637,180 +637,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A  combustão completa de combustíveis fósseis produz água e dióxido de carbono (CO2,\n",
-      "massa molar 44 g mol−1). A União Europeia estabeleceu, desde 2012, limite de emissão\n",
-      "veicular de 130 g de CO2 por quilômetro rodado (valor aplicável a uma média de veículos de\n",
-      "um mesmo fabricante), tendo como penalidade multa, caso o fabricante ultrapasse a meta. A\n",
-      "gasolina é uma mistura de hidrocarbonetos com cerca de oito carbonos em sua composição,\n",
-      "incluindo isômeros do octano (C8H18). Considere que em uma cidade o consumo médio diário\n",
-      "dos carros de um fabricante seja de 10 km L−1 de gasolina, formada apenas por\n",
-      "octano (massa molar 114 g mol−1) e que sua densidade seja 0,70 kg L−1.\n",
-      "A diferença de emissão de CO2 dos carros desse fabricante em relação ao limite estabelecido\n",
-      "na União Europeia é\n",
-      "a  combustão completa de combustíveis fósseis produz água e dióxido de carbono co2\n",
-      "massa molar 44 g mol−1 a união europeia estabeleceu desde 2012 limite de emissão\n",
-      "veicular de 130 g de co2 por quilômetro rodado valor aplicável a uma média de veículos de\n",
-      "um mesmo fabricante tendo como penalidade multa caso o fabricante ultrapasse a meta a\n",
-      "gasolina é uma mistura de hidrocarbonetos com cerca de oito carbonos em sua composição\n",
-      "incluindo isômeros do octano c8h18 considere que em uma cidade o consumo médio diário\n",
-      "dos carros de um fabricante seja de 10 km l−1 de gasolina formada apenas por\n",
-      "octano massa molar 114 g mol−1 e que sua densidade seja 070 kg l−1\n",
-      "a diferença de emissão de co2 dos carros desse fabricante em relação ao limite estabelecido\n",
-      "na união europeia é\n",
-      "['a', 'combustão', 'completa', 'de', 'combustíveis', 'fósseis', 'produz', 'água', 'e', 'dióxido', 'de', 'carbono', 'co2', 'massa', 'molar', '44', 'g', 'mol', '1', 'a', 'união', 'europeia', 'estabeleceu', 'desde', '2012', 'limite', 'de', 'emissão', 'veicular', 'de', '130', 'g', 'de', 'co2', 'por', 'quilômetro', 'rodado', 'valor', 'aplicável', 'a', 'uma', 'média', 'de', 'veículos', 'de', 'um', 'mesmo', 'fabricante', 'tendo', 'como', 'penalidade', 'multa', 'caso', 'o', 'fabricante', 'ultrapasse', 'a', 'meta', 'a', 'gasolina', 'é', 'uma', 'mistura', 'de', 'hidrocarbonetos', 'com', 'cerca', 'de', 'oito', 'carbonos', 'em', 'sua', 'composição', 'incluindo', 'isômeros', 'do', 'octano', 'c8h18', 'considere', 'que', 'em', 'uma', 'cidade', 'o', 'consumo', 'médio', 'diário', 'dos', 'carros', 'de', 'um', 'fabricante', 'seja', 'de', '10', 'km', 'l', '1', 'de', 'gasolina', 'formada', 'apenas', 'por', 'octano', 'massa', 'molar', '114', 'g', 'mol', '1', 'e', 'que', 'sua', 'densidade', 'seja', '070', 'kg', 'l', '1', 'a', 'diferença', 'de', 'emissão', 'de', 'co2', 'dos', 'carros', 'desse', 'fabricante', 'em', 'relação', 'ao', 'limite', 'estabelecido', 'na', 'união', 'europeia', 'é']\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "['a',\n",
-       " 'combustão',\n",
-       " 'completa',\n",
-       " 'de',\n",
-       " 'combustíveis',\n",
-       " 'fósseis',\n",
-       " 'produz',\n",
-       " 'água',\n",
-       " 'e',\n",
-       " 'dióxido',\n",
-       " 'de',\n",
-       " 'carbono',\n",
-       " 'co2',\n",
-       " 'massa',\n",
-       " 'molar',\n",
-       " '44',\n",
-       " 'g',\n",
-       " 'mol',\n",
-       " '1',\n",
-       " 'a',\n",
-       " 'união',\n",
-       " 'europeia',\n",
-       " 'estabeleceu',\n",
-       " 'desde',\n",
-       " '2012',\n",
-       " 'limite',\n",
-       " 'de',\n",
-       " 'emissão',\n",
-       " 'veicular',\n",
-       " 'de',\n",
-       " '130',\n",
-       " 'g',\n",
-       " 'de',\n",
-       " 'co2',\n",
-       " 'por',\n",
-       " 'quilômetro',\n",
-       " 'rodado',\n",
-       " 'valor',\n",
-       " 'aplicável',\n",
-       " 'a',\n",
-       " 'uma',\n",
-       " 'média',\n",
-       " 'de',\n",
-       " 'veículos',\n",
-       " 'de',\n",
-       " 'um',\n",
-       " 'mesmo',\n",
-       " 'fabricante',\n",
-       " 'tendo',\n",
-       " 'como',\n",
-       " 'penalidade',\n",
-       " 'multa',\n",
-       " 'caso',\n",
-       " 'o',\n",
-       " 'fabricante',\n",
-       " 'ultrapasse',\n",
-       " 'a',\n",
-       " 'meta',\n",
-       " 'a',\n",
-       " 'gasolina',\n",
-       " 'é',\n",
-       " 'uma',\n",
-       " 'mistura',\n",
-       " 'de',\n",
-       " 'hidrocarbonetos',\n",
-       " 'com',\n",
-       " 'cerca',\n",
-       " 'de',\n",
-       " 'oito',\n",
-       " 'carbonos',\n",
-       " 'em',\n",
-       " 'sua',\n",
-       " 'composição',\n",
-       " 'incluindo',\n",
-       " 'isômeros',\n",
-       " 'do',\n",
-       " 'octano',\n",
-       " 'c8h18',\n",
-       " 'considere',\n",
-       " 'que',\n",
-       " 'em',\n",
-       " 'uma',\n",
-       " 'cidade',\n",
-       " 'o',\n",
-       " 'consumo',\n",
-       " 'médio',\n",
-       " 'diário',\n",
-       " 'dos',\n",
-       " 'carros',\n",
-       " 'de',\n",
-       " 'um',\n",
-       " 'fabricante',\n",
-       " 'seja',\n",
-       " 'de',\n",
-       " '10',\n",
-       " 'km',\n",
-       " 'l',\n",
-       " '1',\n",
-       " 'de',\n",
-       " 'gasolina',\n",
-       " 'formada',\n",
-       " 'apenas',\n",
-       " 'por',\n",
-       " 'octano',\n",
-       " 'massa',\n",
-       " 'molar',\n",
-       " '114',\n",
-       " 'g',\n",
-       " 'mol',\n",
-       " '1',\n",
-       " 'e',\n",
-       " 'que',\n",
-       " 'sua',\n",
-       " 'densidade',\n",
-       " 'seja',\n",
-       " '070',\n",
-       " 'kg',\n",
-       " 'l',\n",
-       " '1',\n",
-       " 'a',\n",
-       " 'diferença',\n",
-       " 'de',\n",
-       " 'emissão',\n",
-       " 'de',\n",
-       " 'co2',\n",
-       " 'dos',\n",
-       " 'carros',\n",
-       " 'desse',\n",
-       " 'fabricante',\n",
-       " 'em',\n",
-       " 'relação',\n",
-       " 'ao',\n",
-       " 'limite',\n",
-       " 'estabelecido',\n",
-       " 'na',\n",
-       " 'união',\n",
-       " 'europeia',\n",
-       " 'é']"
+       "'a combustão completa de combustíveis fósseis produz água e dióxido de carbono co2 massa molar 44 g mol 1 a união europeia estabeleceu desde 2012 limite de emissão veicular de 130 g de co2 por quilômetro rodado valor aplicável a uma média de veículos de um mesmo fabricante tendo como penalidade multa caso o fabricante ultrapasse a meta a gasolina é uma mistura de hidrocarbonetos com cerca de oito carbonos em sua composição incluindo isômeros do octano c8h18 considere que em uma cidade o consumo médio diário dos carros de um fabricante seja de 10 km l 1 de gasolina formada apenas por octano massa molar 114 g mol 1 e que sua densidade seja 070 kg l 1 a diferença de emissão de co2 dos carros desse fabricante em relação ao limite estabelecido na união europeia é'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,23 +656,134 @@
     "from nltk.tokenize.regexp import RegexpTokenizer\n",
     "\n",
     "def preprocess(text : str):\n",
-    "    print(text)\n",
-    "    \n",
+    "    #print(text)\n",
+    "\n",
     "    for pontuation in string.punctuation:\n",
     "        text = text.replace(pontuation, '')\n",
     "\n",
     "    text = text.lower()\n",
     "\n",
-    "    print(text)\n",
+    "    # print(text)\n",
     "\n",
     "    tokenizer = RegexpTokenizer(r'\\w+')\n",
     "    tokens = tokenizer.tokenize(text)\n",
-    "    print(tokens)\n",
-    "    \n",
-    "    \n",
-    "    return tokens\n",
+    "    # print(tokens)\n",
+    "\n",
+    "\n",
+    "    return ' '.join(tokens)\n",
     "\n",
     "preprocess(train_base['ENUNCIADO_QUESTAO'][1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "561\n",
+      "a perfuração de poços para a extração de petróleo causa soterramento do leito submarino contaminação química e aumento da turbidez da água além disso o vazamento desses hidrocarbonetos gera efeitos adversos em especial no metabolismo de organismos aquáticos influenciando as cadeias alimentares de ecossistemas marinhos essas consequências negativas advêm das propriedades do petróleo uma mistura oleosa de substâncias orgânicas de coloração escura e menos densa que a água a consequência do vazamento dessa mistura na produtividade primária do ecossistema é oa\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train = []\n",
+    "X_test = []\n",
+    "\n",
+    "for doc in train_base['ENUNCIADO_QUESTAO']:\n",
+    "  X_train.append(preprocess(doc))\n",
+    "  \n",
+    "for doc in test_base['ENUNCIADO_QUESTAO']:\n",
+    "  X_test.append(preprocess(doc))\n",
+    "\n",
+    "print(len(X_train[0]))\n",
+    "print(X_train[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulário: ['abaixo' 'abanando' 'abandonado' ... 'úrsula' 'úteros' 'útil'], tamanho: 8530\n",
+      "[[0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " ...\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]\n",
+      " [0 0 0 ... 0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Crie um objeto CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "\n",
+    "# Ajuste o vetorizador ao texto e transforme os documentos em uma matriz de termos de documentos (bag-of-words)\n",
+    "X = vectorizer.fit_transform(X_train)\n",
+    "\n",
+    "# Obtenha o vocabulário\n",
+    "vocab = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# Converta a matriz para uma representação de matriz densa\n",
+    "X_dense = X.toarray()\n",
+    "\n",
+    "print(f\"Vocabulário: {vocab}, tamanho: {len(vocab)}\")\n",
+    "print(X_dense)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vocabulário: ['cachorro' 'cama' 'correu' 'dormiu' 'gato' 'longe' 'na' 'no' 'para'\n",
+      " 'parque' 'pássaro' 'voou']\n",
+      "Matriz de termos de documentos (bag-of-words):\n",
+      " [[1 0 1 0 0 0 0 1 0 1 0 0]\n",
+      " [0 1 0 1 1 0 1 0 0 0 0 0]\n",
+      " [0 0 0 0 0 1 0 0 1 0 1 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "\n",
+    "# Exemplo de documentos\n",
+    "documents = [\n",
+    "    'O cachorro correu no parque.',\n",
+    "    'O gato dormiu na cama.',\n",
+    "    'O pássaro voou para longe.'\n",
+    "]\n",
+    "\n",
+    "# Crie um objeto CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "\n",
+    "# Ajuste o vetorizador ao texto e transforme os documentos em uma matriz de termos de documentos (bag-of-words)\n",
+    "X = vectorizer.fit_transform(documents)\n",
+    "\n",
+    "# Obtenha o vocabulário\n",
+    "vocab = vectorizer.get_feature_names_out()\n",
+    "\n",
+    "# Converta a matriz para uma representação de matriz densa\n",
+    "X_dense = X.toarray()\n",
+    "\n",
+    "print(\"Vocabulário:\", vocab)\n",
+    "print(\"Matriz de termos de documentos (bag-of-words):\\n\", X_dense)\n"
    ]
   }
  ],
