--- a/Processamento_imagens/aula04/main.ipynb
+++ b/Processamento_imagens/aula04/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,23 +12,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "valor = 100"
+    "valor = 1_000_000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "achou o valor 100 em 0.00000 segundos e em 0 tentativas\n"
+      "achou o valor 1000000000 em 194.07968 segundos e em 342110825 tentativas\n"
      ]
     }
    ],
@@ -37,11 +37,12 @@
     "tentativas = 0\n",
     "while True:\n",
     "    test = randint(1, valor)\n",
+    "    tentativas += 1 \n",
     "    if valor == test:\n",
     "        fim = time.time()\n",
     "        break\n",
     "\n",
-    "print(f\"achou o valor {valor} em {(fim - inicio):0.5f} segundos e em {tentativas} tentativas\")"
+    "print(f\"achou o valor {valor} em {((fim - inicio)/60):0.5f} segundos e em {tentativas} tentativas\")"
    ]
   }
  ],
@@ -61,7 +62,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
