--- a/Processamento_imagens/aula04/classificador.ipynb
+++ b/Processamento_imagens/aula04/classificador.ipynb
@@ -88,7 +88,7 @@
     }
    ],
    "source": [
-    "counter_images(subdrectory_classes)"
+    "counter_images(subdrectory_classes)\n"
    ]
   }
  ],
