subindo a serie de arquivos

--- a/Processamento_imagens/aula04/classificador.ipynb
+++ b/Processamento_imagens/aula04/classificador.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data_base(local_base):\n",
+    "    data = []\n",
+    "    subdrectory_classes = [(directory.path, directory.name) for directory in os.scandir(local_base) if directory.is_dir()]\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return subdrectory_classes\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -38,7 +64,7 @@
        "  'person')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,50 +72,142 @@
    "source": [
     "dir_base_img = script_dir + r'\\data'\n",
     "\n",
-    "# Obtendo todas as subpastas (possibilidades) e seus nomes do diretório de treinamento\n",
-    "subdrectory_classes = [(directory.path, directory.name) for directory in os.scandir(dir_base_img) if directory.is_dir()]\n",
-    "subdrectory_classes\n"
+    "load_data_base(dir_base_img)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def counter_images(dir):\n",
-    "    for diretorio, classe in dir:\n",
+    "def contar_imagens_por_pasta(lista_pastas):\n",
+    "    dados = []\n",
+    "    for diretorio, classe in lista_pastas:\n",
     "        # Lista todos os arquivos no diretório atual\n",
     "        arquivos = os.listdir(diretorio)\n",
     "        # Filtra os arquivos que têm extensão de imagem (você pode ajustar isso conforme necessário)\n",
     "        imagens = [arquivo for arquivo in arquivos if arquivo.lower().endswith(('.png', '.jpg', '.jpeg', '.gif', '.bmp'))]\n",
-    "        # Imprime o nome da classe e o número de imagens\n",
-    "        print(f\"A classe '{classe}' contém {len(imagens)} imagens.\")"
+    "        # Adiciona os dados à lista\n",
+    "        dados.append({'Classe': classe, 'Número de Imagens': len(imagens)})\n",
+    "\n",
+    "    # Cria um DataFrame com os dados\n",
+    "    df = pd.DataFrame(dados)\n",
+    "    # Ordena o DataFrame pela classe\n",
+    "    df = df.sort_values(by='Classe').reset_index(drop=True)\n",
+    "    \n",
+    "    return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A classe 'airplane' contém 727 imagens.\n",
-      "A classe 'car' contém 968 imagens.\n",
-      "A classe 'cat' contém 885 imagens.\n",
-      "A classe 'dog' contém 702 imagens.\n",
-      "A classe 'flower' contém 843 imagens.\n",
-      "A classe 'fruit' contém 1000 imagens.\n",
-      "A classe 'motorbike' contém 788 imagens.\n",
-      "A classe 'person' contém 986 imagens.\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Classe</th>\n",
+       "      <th>Número de Imagens</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>airplane</td>\n",
+       "      <td>727</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>car</td>\n",
+       "      <td>968</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>cat</td>\n",
+       "      <td>885</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>dog</td>\n",
+       "      <td>702</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>flower</td>\n",
+       "      <td>843</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>fruit</td>\n",
+       "      <td>1000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>motorbike</td>\n",
+       "      <td>788</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>person</td>\n",
+       "      <td>986</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Classe  Número de Imagens\n",
+       "0   airplane                727\n",
+       "1        car                968\n",
+       "2        cat                885\n",
+       "3        dog                702\n",
+       "4     flower                843\n",
+       "5      fruit               1000\n",
+       "6  motorbike                788\n",
+       "7     person                986"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "counter_images(subdrectory_classes)\n"
+    "contar_imagens_por_pasta(subdrectory_classes)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
